20080309
 - (dtucker) [configure.ac] It turns out gcc's -fstack-protector-all doesn't
   always work for all platforms and versions, so test what we can and
   add a configure flag to turn it of if needed.  ok djm@
 - (dtucker) [openbsd-compat/port-aix.{c,h}] Remove AIX specific initgroups
   implementation.  It's not needed to fix bug #1081 and breaks the build
   on some AIX configurations.
 - (dtucker) [openbsd-compat/regress/strtonumtest.c] Bug #1347: Use platform's
   equivalent of LLONG_MAX for the compat regression tests, which makes them
   run on AIX and HP-UX.  Patch from David Leonard.
 - (dtucker) [configure.ac] Run stack-protector tests with -Werror to catch
   platforms where gcc understands the option but it's not supported (and
   thus generates a warning).

20080307
 - (djm) OpenBSD CVS Sync
   - jmc@cvs.openbsd.org 2008/02/11 07:58:28
     [ssh.1 sshd.8 sshd_config.5]
     bump Mdocdate for pages committed in "febuary", necessary because
     of a typo in rcs.c;
   - djm@cvs.openbsd.org 2008/02/13 22:38:17
     [servconf.h session.c sshd.c]
     rekey arc4random and OpenSSL RNG in postauth child
     closefrom fds > 2 before shell/command execution
     ok markus@
   - mbalmer@cvs.openbsd.org 2008/02/14 13:10:31
     [sshd.c]
     When started in configuration test mode (-t) do not check that sshd is
     being started with an absolute path.
     ok djm
   - markus@cvs.openbsd.org 2008/02/20 15:25:26
     [session.c]
     correct boolean encoding for coredump; der Mouse via dugsong
   - djm@cvs.openbsd.org 2008/02/22 05:58:56
     [session.c]
     closefrom() call was too early, delay it until just before we execute
     the user's rc files (if any).
   - dtucker@cvs.openbsd.org 2008/02/22 20:44:02
     [clientloop.c packet.c packet.h serverloop.c]
     Allow all SSH2 packet types, including UNIMPLEMENTED to reset the
     keepalive timer (bz #1307).  ok markus@
   - djm@cvs.openbsd.org 2008/02/27 20:21:15
     [sftp-server.c]